--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import MainLayout from '@layouts/MainLayout.astro'
 	<h1 class='text-3xl font-bold'>Hola Mundo</h1>
 	<section id='about' class='bg-gray-600 h-[200px]'>sobre mi</section>
 
-	<div class='h-screen'></div>
+	<div class='h-screen bg-gray-500'></div>
 
 	<section id='projects' class='bg-gray-600 h-[200px]'>projects</section>
 </MainLayout>
