--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -18,7 +18,7 @@ import '@styles/global.css'
 		class='flex flex-col min-h-screen bg-gray-800 text-gray-200 items-center text-center'
 	>
 		<NavBar />
-		<main class='flex-grow w-full'>
+		<main class='flex-grow w-[70%] flex flex-col gap-12'>
 			<slot />
 		</main>
 		<TopButton />
