--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -461,6 +461,29 @@
 </style>
 
 <script>
+	function drawVisor() {
+		const canvas = document.getElementById('visor') as HTMLCanvasElement
+		const ctx = canvas.getContext('2d') as CanvasRenderingContext2D
+
+		ctx.beginPath()
+		ctx.moveTo(5, 45)
+		ctx.bezierCurveTo(15, 64, 45, 64, 55, 45)
+
+		ctx.lineTo(55, 20)
+		ctx.bezierCurveTo(55, 15, 50, 10, 45, 10)
+
+		ctx.lineTo(15, 10)
+
+		ctx.bezierCurveTo(15, 10, 5, 10, 5, 20)
+		ctx.lineTo(5, 45)
+
+		ctx.fillStyle = '#2f3640'
+		ctx.strokeStyle = '#f5f6fa'
+		ctx.fill()
+		ctx.stroke()
+	}
+
+	drawVisor()
 	const homeBtn = document.getElementById('home-btn') as HTMLButtonElement
 	homeBtn.addEventListener('click', () => {
 		window.location.href = '/'
