Actualizar estilos de componentes y mejorar la estructura de la página de inicio y 404

--- a/src/components/shared/Footer.astro
+++ b/src/components/shared/Footer.astro
@@ -2,7 +2,7 @@
 const currentYear = new Date().getFullYear()
 ---
 
-<footer class='flex flex-col items-center text-center p-5 bg-gray-900 w-full'>
+<footer class='flex flex-col items-center text-center p-5 bg-indigo-950 w-full'>
 	<div class=''>
 		<p>© {currentYear} Jhonattan Pérez Velásquez.</p>
 		<p>
