--- a/src/components/shared/NavBar.astro
+++ b/src/components/shared/NavBar.astro
@@ -2,11 +2,11 @@
 
 ---
 
-<nav class='flex flex-col items-center p-4 bg-gray-900 text-white w-full'>
+<nav class='flex flex-col items-center p-4 bg-indigo-950 text-white w-full'>
 	<ul class='flex gap-10'>
 		<li><a href='/'>Inicio</a></li>
 		<li><a href='#about'>Sobre Mi</a></li>
 		<li><a href='#projects'>Proyectos</a></li>
-		<li><a href='/experience'>Experiencia</a></li>
+		<li><a href='#experience'>Experiencia</a></li>
 	</ul>
 </nav>
