--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -15,10 +15,10 @@ import '@styles/global.css'
 		<title>Kaiselion Portfolio</title>
 	</head>
 	<body
-		class='flex flex-col min-h-screen bg-gray-800 text-gray-200 items-center text-center'
+		class='flex flex-col min-h-screen bg-gradient-to-br from-indigo-900 to-indigo-950 text-gray-200 items-center'
 	>
 		<NavBar />
-		<main class='flex-grow w-[70%] flex flex-col gap-12'>
+		<main class='flex-grow w-[60%] flex flex-col gap-12'>
 			<slot />
 		</main>
 		<TopButton />
