--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,44 @@ import MainLayout from '@layouts/MainLayout.astro'
 ---
 
 <MainLayout>
-	<h1 class='text-3xl font-bold'>Hola Mundo</h1>
-	<section id='about' class='bg-gray-600 h-[200px]'>sobre mi</section>
+	<h1 class='text-3xl font-bold text-center'>Bienvenido a mi portafolio</h1>
 
-	<div class='h-screen bg-gray-500'></div>
+	<section id='about'>
+		<div class='flex flex-col text-center h-full'>
+			<h2 class='text-2xl font-bold'>Soy Jhonattan Pérez</h2>
+			<p class='text-lg'>Ingeniero Civil en Informática</p>
+			<p class='text-lg'>
+				Desarrollador web apasionado por la tecnología y el aprendizaje
+				continuo.
+			</p>
+		</div>
+	</section>
 
-	<section id='projects' class='bg-gray-600 h-[200px]'>projects</section>
+	<section id='experience'>
+		<div class='flex flex-col text-center h-full'>
+			<h2 class='text-2xl font-bold'>Experiencia</h2>
+			<p class='text-lg'>
+				Tengo experiencia en desarrollo frontend y backend, así como en diseño
+				de interfaces.
+			</p>
+		</div>
+	</section>
+
+	<section id='projects'>
+		<div class='flex flex-col text-center h-full'>
+			<h2 class='text-2xl font-bold'>Proyectos</h2>
+			<p class='text-lg'>
+				He trabajado en varios proyectos interesantes, incluyendo aplicaciones
+				web y móviles.
+			</p>
+		</div>
+	</section>
 </MainLayout>
+
+<style>
+	@reference 'tailwindcss';
+	section {
+		@apply bg-indigo-800/60;
+		height: 300px;
+	}
+</style>
