Mejorar estilos de NavBar y TopButton; ajustar márgenes en el título de la página de inicio

--- a/src/components/shared/NavBar.astro
+++ b/src/components/shared/NavBar.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<nav class='flex flex-col items-center p-4 bg-indigo-950 text-white w-full'>
+<nav class='flex flex-col items-center p-4 bg-indigo-950/70 text-white w-full'>
 	<ul class='flex gap-10'>
 		<li><a href='/'>Inicio</a></li>
 		<li><a href='#about'>Sobre Mi</a></li>
