--- a/src/components/shared/TopButton.astro
+++ b/src/components/shared/TopButton.astro
@@ -4,7 +4,7 @@
 
 <button
 	id='top-btn'
-	class='fixed bottom-30 right-15 text-center bg-indigo-700 rounded-full scale-175 hover:scale-200 cursor-pointer'
+	class='fixed bottom-30 right-8 sm:right-15 text-center bg-indigo-700 rounded-full scale-175 hover:scale-200 cursor-pointer'
 >
 	<svg
 		class='w-6 h-6 text-gray-800 dark:text-white'
