--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,9 @@ import MainLayout from '@layouts/MainLayout.astro'
 ---
 
 <MainLayout>
-	<h1 class='text-3xl font-bold text-center'>Bienvenido a mi portafolio</h1>
+	<h1 class='text-3xl font-bold text-center mt-5'>
+		Bienvenido a mi portafolio
+	</h1>
 
 	<section id='about'>
 		<div class='flex flex-col text-center h-full'>
