Actualizar estilos de encabezados en secciones sobre mí, experiencia y proyectos; ajustar estilos de sección

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import MainLayout from '@layouts/MainLayout.astro'
 
 	<section id='about'>
 		<div class='flex flex-col text-center h-full'>
-			<h2 class='text-2xl font-bold'>Soy Jhonattan Pérez</h2>
+			<h2 class='text-xl font-extrabold pb-2'>Soy Jhonattan Pérez</h2>
 			<p class='text-lg'>Ingeniero Civil en Informática</p>
 			<p class='text-lg'>
 				Desarrollador web apasionado por la tecnología y el aprendizaje
@@ -20,7 +20,7 @@ import MainLayout from '@layouts/MainLayout.astro'
 
 	<section id='experience'>
 		<div class='flex flex-col text-center h-full'>
-			<h2 class='text-2xl font-bold'>Experiencia</h2>
+			<h2 class='text-xl font-extrabold pb-2'>Experiencia</h2>
 			<p class='text-lg'>
 				Tengo experiencia en desarrollo frontend y backend, así como en diseño
 				de interfaces.
@@ -30,7 +30,7 @@ import MainLayout from '@layouts/MainLayout.astro'
 
 	<section id='projects'>
 		<div class='flex flex-col text-center h-full'>
-			<h2 class='text-2xl font-bold'>Proyectos</h2>
+			<h2 class='text-xl font-extrabold pb-2'>Proyectos</h2>
 			<p class='text-lg'>
 				He trabajado en varios proyectos interesantes, incluyendo aplicaciones
 				web y móviles.
@@ -42,7 +42,7 @@ import MainLayout from '@layouts/MainLayout.astro'
 <style>
 	@reference 'tailwindcss';
 	section {
-		@apply bg-indigo-800/60;
+		@apply bg-indigo-800/60 p-5;
 		height: 300px;
 	}
 </style>
