--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,7 @@ import MainLayout from '@layouts/MainLayout.astro'
 <style>
 	@reference 'tailwindcss';
 	section {
-		@apply bg-indigo-800/60 p-5;
+		@apply bg-indigo-800/60 p-5 rounded-3xl;
 		height: 300px;
 	}
 </style>
