--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -3,6 +3,8 @@ import NavBar from '@components/shared/NavBar.astro'
 import Footer from '@components/shared/Footer.astro'
 import TopButton from '@/components/shared/TopButton.astro'
 
+import { ClientRouter } from 'astro:transitions'
+
 import '@styles/global.css'
 ---
 
@@ -10,15 +12,16 @@ import '@styles/global.css'
 	<head>
 		<meta charset='utf-8' />
 		<link rel='icon' type='image/svg+xml' href='/favicon.svg' />
-		<meta name='viewport' content='width=device-width' />
+		<meta name='viewport' content='width=device-width, initial-scale=1.0' />
 		<meta name='generator' content={Astro.generator} />
 		<title>Kaiselion Portfolio</title>
+		<ClientRouter />
 	</head>
 	<body
 		class='flex flex-col min-h-screen bg-gradient-to-br from-indigo-900 to-indigo-950 text-gray-200 items-center'
 	>
 		<NavBar />
-		<main class='flex-grow w-[80%] flex flex-col gap-12'>
+		<main class='flex-grow w-[85%] flex flex-col gap-12'>
 			<slot />
 		</main>
 		<TopButton />
